Init : change ESLint func-style setting
"expression"->"declaration"

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -23,7 +23,7 @@ rules:
     - "always"
   func-style:
     - "error"
-    - "expression"
+    - "declaration"
     - { allowArrowFunctions: true }
   no-unused-vars:
     - "warn"
