Feat : Implementation of a scroll view #12

--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@material-ui/data-grid": "^4.0.0-alpha.37",
     "@mui/icons-material": "^5.14.3",
     "@mui/joy": "^5.0.0-beta.2",
-    "@mui/material": "^5.14.3",
+    "@mui/material": "^5.14.6",
     "@mui/styled-engine-sc": "^5.12.0",
+    "@mui/x-data-grid": "^6.12.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -24,6 +26,7 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "react-window": "^1.8.9",
     "recoil": "^0.7.7",
     "styled-components": "^6.0.6",
     "styled-reset": "^4.5.1",
