--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "recoil": "^0.7.7",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^6.0.6",
     "styled-reset": "^4.5.1",
     "web-vitals": "^2.1.4"
