--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@uiw/react-md-editor": "^3.23.5",
     "axios": "^1.4.0",
     "react": "^18.2.0",
+    "react-cookie": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.14.2",
