Fix : supported CI node-version changed #20
Signed-off-by: ymw0407 <yunminwo1211@gmail.com>

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,6 +1,6 @@
 name: Open-Set-Go CI
 
-on: [ push, pull_request ]
+on: [ push ]
 
 jobs:
   build:
@@ -8,7 +8,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [ 14.x, 16.x, 18.x ]
+        node-version: [ 18.x ]
     
     steps:
         - uses: actions/checkout@v3
