Update : TemplateBody displays md preview #35
Signed-off-by: bentshrimp <bent_shrimp@kookmin.ac.kr>

--- a/package.json
+++ b/package.json
@@ -11,16 +11,14 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@material-ui/data-grid": "^4.0.0-alpha.37",
-    "@mui/icons-material": "^5.14.3",
-    "@mui/material": "^5.14.6",
-    "@mui/styled-engine-sc": "^5.12.0",
-    "@mui/x-data-grid": "^6.12.0",
     "@mui/icons-material": "^5.14.8",
     "@mui/material": "^5.14.8",
     "@mui/styled-engine-sc": "^5.14.8",
+    "@mui/x-data-grid": "^6.12.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@uiw/react-markdown-preview": "^4.1.15",
     "@uiw/react-md-editor": "^3.23.5",
     "axios": "^1.5.0",
     "prop-types": "^15.8.1",
@@ -31,8 +29,8 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
-    "react-window": "^1.8.9",
     "react-slick": "^0.29.0",
+    "react-window": "^1.8.9",
     "recoil": "^0.7.7",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.0.6",
