--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@uiw/react-markdown-preview": "^4.1.15",
     "@uiw/react-md-editor": "^3.23.5",
     "axios": "^1.5.0",
+    "env-cmd": "^10.1.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-cookie": "^6.1.0",
@@ -39,6 +40,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "start:dev": "env-cmd -f .env.development.local react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
