--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,19 +1,19 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Open-Set-Go",
+  "name": "Open Set Go",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "Logo.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
       "src": "logo192.png",
       "type": "image/png",
-      "sizes": "192x192"
+      "sizes": "138x192"
     },
     {
-      "src": "logo512.png",
+      "src": "Logo512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
