--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,14 +3,14 @@
   "name": "Open Set Go",
   "icons": [
     {
-      "src": "Logo.ico",
+      "src": "logo.svg",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
       "src": "logo192.png",
       "type": "image/png",
-      "sizes": "138x192"
+      "sizes": "192x192"
     },
     {
       "src": "Logo512.png",
