--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@uiw/react-markdown-preview": "^4.1.15",
     "@uiw/react-md-editor": "^3.23.5",
     "axios": "^1.5.0",
+    "chart.js": "^4.4.0",
     "env-cmd": "^10.1.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
     "react-query": "^3.39.3",
