Feat : using react-persist to not problem with f5 & prevent error resolved at #139

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-slick": "^0.29.0",
     "react-window": "^1.8.9",
     "recoil": "^0.7.7",
+    "recoil-persist": "^5.1.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.0.6",
     "styled-reset": "^4.5.1",
