--- a/.github/ISSUE_TEMPLATE/BugReport.yml
+++ b/.github/ISSUE_TEMPLATE/BugReport.yml
@@ -1,62 +1,48 @@
 ---
 name: "🐛 Bug Report"
 description: Report a bug
-title: "🐛 [BUG] - <title>"
+title: "🐛 [BUG]: "
 labels: ["bug"]
 assignees: []
 
 body:
-  - type: dropdown
-    id: browsers
-    attributes:
-      label: "Browsers"
-      description: What browsers are you seeing the problem on?
-      multiple: true
-      options:
-        - Firefox
-        - Chrome
-        - Safari
-        - Microsoft Edge
-        - Opera
-    validations:
-      required: true
-
-  - type: dropdown
-    id: os
-    attributes:
-      label: "OS"
-      description: What is the impacted environment?
-      multiple: true
-      options:
-        - Windows
-        - Linux
-        - Mac
-    validations:
-      required: true
-
-  - type: textarea
-    id: description
-    attributes:
-      label: "Description"
-      description: Enter an explicit description of your issue and explain the bug briefly and clearly.
-    validations:
-      required: true
-
   - type: input
-    id: reprod-url
     attributes:
-      label: "Reproduction URL"
-      description: Add a URL related to the bug.
-      placeholder: ex) https://github.com/USERNAME/REPO-NAME
+      label: Website or Code
+      description: |
+        Which website were you using when the bug happened?
+
+        This should be a public URL, GitHub repo, or Code Sandbox app so the React team can reproduce the error being reported. (Please no localhost URLs.)
+      placeholder: |
+        e.g. Website URL, Code Sandbox app or Location of code in Problem(eg. src/pages/ErrorPage.js)
     validations:
       required: true
 
   - type: textarea
-    id: reprod-steps
     attributes:
-      label: "Reproduction Steps"
-      description: Explain your issue step by step.
-      render: bash
+      label: Repro steps
+      description: |
+        What were you doing on the website or app when the bug happened? Detailed information helps maintainers reproduce and fix bugs.
+
+        Issues filed without repro steps will be closed.
+      placeholder: |
+        Example bug report:
+        1. Log in with GitHub OAuth
+        2. Click "Log-out" on the right app-bar
+        3. log-out failed
+    validations:
+      required: true
+      
+  - type: dropdown
+    attributes:
+      label: How often does this bug happen?
+      description: |
+        Following the repro steps above, how easily are you able to reproduce this bug?
+      options:
+        - Every time
+        - Often
+        - Sometimes
+        - Only once
     validations:
       required: true
 
@@ -65,7 +51,6 @@ body:
     attributes:
       label: "Solutions"
       description: If you have a solution, please share it.
-      render: bash
     validations:
       required: false
 
@@ -76,6 +61,5 @@ body:
       description: Add screenshots to help explain your problem.
       value: |
         ![DESCRIPTION](LINK.png)
-      render: bash
     validations:
       required: false
