Feat : linter & formatter setting
Signed-off-by: ymw0407 <yunminwo1211@gmail.com>

--- a/.eslintignore
+++ b/.eslintignore
@@ -26,3 +26,7 @@ packages/react-devtools-timeline/dist
 packages/react-devtools-timeline/static
 
 # code referenced by https://github.com/facebook/react/blob/main/.eslintignore
+
+src/registerServiceWorker.js
+src/**/__tests__/**
+src/libs/**
