--- a/.prettierrc
+++ b/.prettierrc
@@ -1,11 +1,12 @@
 {
-  "singleQuote": false,
   "semi": true,
   "useTabs": false,
   "tabWidth": 2,
   "trailingComma": "all",
-  "printWidth": 80,
-  "bracketSpacing": true,
-  "arrowParens": "always",
-  "endOfLine": "auto"
+  "printWidth": 120,
+  "proseWrap": "never",
+  "singleQuote": true,
+  "htmlWhitespaceSensitivity": "css",
+  "jsxSingleQuote": true,
+  "endOfLine": "lf"
 }
