--- a/package.json
+++ b/package.json
@@ -9,19 +9,38 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@material-ui/data-grid": "^4.0.0-alpha.37",
+    "@mui/icons-material": "^5.14.18",
+    "@mui/material": "^5.14.18",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.6",
+    "@mui/styles": "^5.14.18",
+    "@mui/x-data-grid": "^6.18.1",
+    "@next/bundle-analyzer": "^14.0.3",
     "next": "14.0.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "styled-components": "^6.1.1",
+    "styled-reset": "^4.5.1"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/styled-components": "^5.1.30",
+    "@typescript-eslint/eslint-plugin": "^6.11.0",
+    "@typescript-eslint/parser": "^6.11.0",
     "autoprefixer": "^10.0.1",
-    "eslint": "^8",
+    "babel-plugin-styled-components": "^2.1.4",
+    "eslint": "^8.54.0",
+    "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "14.0.3",
+    "eslint-config-prettier": "^9.0.0",
     "postcss": "^8.4.31",
     "postcss-syntax": "^0.36.2",
+    "prettier": "^3.1.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5.2.2"
   },
